--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,8 +36,8 @@ input {
     width: 600px;
     margin: 0;
     padding: 20px;
-    background-image: url("../img/cell.jpg");
-    background-position: bottom 17px right -112px;
+    /* background-image: url("../img/cell.jpg"); */
+    background-position: top 17px right -112px;
 }
 
 .title_container {
@@ -90,6 +90,7 @@ input {
 .btn {
     display: inline-block;
     margin-top: 10px;
+    margin-left: 10px;
     padding: 5px 20px;
     color: black;
     text-decoration: none;
@@ -104,4 +105,13 @@ input {
 
 .inserted {
     text-decoration: none;
+}
+
+.form-error {
+    position: absolute;
+    padding: 5px 10px;
+    width: 200px;
+    background: #fff;
+    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.1);
+    z-index: 999;
 }
