--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,11 @@ ul {
     justify-content: space-between;
 }
 
+li {
+    width: 160px;
+    text-align: center;
+}
+
 input {
     width: 100%;
     height: 30px;
@@ -63,7 +68,6 @@ input {
 }
 
 .action_edit {
-    padding-right: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -88,6 +92,9 @@ input {
 }
 
 .btn {
+    font-size: 20px;
+    line-height: 1.42857143;
+
     display: inline-block;
     margin-top: 10px;
     margin-left: 10px;
@@ -97,6 +104,7 @@ input {
     cursor: pointer;
     border: 2px solid black;
     border-radius: 10px;
+    background: none;
 }
 
 .popup-btn {
